// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes organizations routes aircraft routes settings components AircraftSettings redirects to organization page if aircraft was not found 1`] = `
<div>
  Organization Page
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings redirects to start page if organization was not found 1`] = `
<div>
  Start Page
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders aircraft settings when everything is loaded 1`] = `
<div
  className="AircraftSettings-container-1"
>
  <h4
    className="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom"
  >
    HBKFW
  </h4>
  <div>
    <h5
      className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
    >
      Checks
    </h5>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Check hinzufügen
      </span>
    </button>
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
    >
      Keine Checks erfasst
    </p>
  </div>
  <div>
    <h5
      className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
    >
      Treibstofftypen
    </h5>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Treibstofftyp hinzufügen
      </span>
    </button>
    <ul
      className="MuiList-root MuiList-dense MuiList-padding"
    >
      <li
        className="MuiListItem-root MuiListItem-dense"
        disabled={false}
      >
        <div
          className="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
          >
            AvGas
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            avgas
          </p>
        </div>
      </li>
      <li
        className="MuiListItem-root MuiListItem-dense"
        disabled={false}
      >
        <div
          className="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
          >
            MoGas
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            mogas
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders loading icon if aircraft not loaded 1`] = `
<div
  className="LoadingIcon-container-2"
>
  <div
    className="MuiCircularProgress-root LoadingIcon-icon-3 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`routes organizations routes aircraft routes settings components AircraftSettings renders loading icon if organization not loaded 1`] = `
<div
  className="LoadingIcon-container-2"
>
  <div
    className="MuiCircularProgress-root LoadingIcon-icon-3 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;
